feat: Configurar token JWT dos Correios e finalizar setup para produção
- Adicionar token JWT real da API dos Correios em .env, .env.example e vercel-env-example.txt
- Configurar URL do frontend da ROSIA (https://www.rosia.com.br)
- Implementar Checkout Transparente do Mercado Pago completo
- Adicionar documentação de deploy e checklist de produção
- Configurar webhook secret para validação de pagamentos
- Preparar todas as variáveis de ambiente para deploy no Vercel

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mercadopago": "^2.8.0",
     "multer": "^2.0.2",
     "sharp": "^0.34.3",
     "uuid": "^9.0.1"
