feat: Adicionar suporte para FRONTEND_URL_LOCAL e implementar todas as correções backend
- Adicionar variável FRONTEND_URL_LOCAL para localhost:8080
- Atualizar CORS para incluir FRONTEND_URL_LOCAL
- Implementar estrutura de resposta correta para login admin
- Corrigir paginação de produtos (totalPages)
- Criar usuário admin de teste (teste@rosia.com)
- Implementar categorias, tamanhos e cores padrão
- Adicionar sistema de logs detalhado
- Verificar e corrigir todos os endpoints admin e públicos
- Criar documentação completa das implementações

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ JWT_SECRET=your_jwt_secret_here
 
 # URL do frontend (para CORS)
 FRONTEND_URL=https://www.rosia.com.br
+FRONTEND_URL_LOCAL=http://localhost:8080
 
 # Configurações de frete (API dos Correios)
 FRETE_API_URL=https://api.correios.com.br
