--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ JWT_SECRET=your_jwt_secret_here
 
 # URL do frontend (para CORS)
 FRONTEND_URL=https://www.rosia.com.br
-FRONTEND_URL_LOCAL=http://localhost:8080
+FRONTEND_URL_LOCAL=https://www.rosia.com.br
 
 # Configurações de frete (API dos Correios)
 FRETE_API_URL=https://api.correios.com.br
