--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
 
 # Configurações do servidor
 PORT=3001
-NODE_ENV=development
+NODE_ENV=production
 
 # JWT Secret (para validação adicional se necessário)
 JWT_SECRET=your_jwt_secret_here
@@ -13,6 +13,9 @@ JWT_SECRET=your_jwt_secret_here
 # URL do frontend (para CORS)
 FRONTEND_URL=https://www.rosia.com.br
 FRONTEND_URL_LOCAL=https://www.rosia.com.br
+
+# Configurações CORS para produção
+CORS_ORIGIN=https://www.rosia.com.br,http://localhost:8080,https://nsazbeovtmmetpiyokqc.supabase.co,https://back-end-rosia02.vercel.app
 
 # Configurações de frete (API dos Correios)
 FRETE_API_URL=https://api.correios.com.br
