fix: Corrigir erro 500 Vercel e atualizar CORS
- Remover inicialização do storage em produção (serverless)
- Adicionar https://rosia.com.br e rosialoja-front-rosialastcommit.vercel.app ao CORS
- Otimizar server.js para Vercel serverless functions
- Criar documentação VERCEL-500-ERROR-FIX.md
- Resolver FUNCTION_INVOCATION_FAILED

--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ FRONTEND_URL=https://www.rosia.com.br
 FRONTEND_URL_LOCAL=https://www.rosia.com.br
 
 # Configurações CORS para produção
-CORS_ORIGIN=https://www.rosia.com.br,http://localhost:8080,https://nsazbeovtmmetpiyokqc.supabase.co,https://back-end-rosia02.vercel.app
+CORS_ORIGIN=https://www.rosia.com.br,https://rosia.com.br,https://rosialoja-front-rosialastcommit.vercel.app,http://localhost:8080,https://nsazbeovtmmetpiyokqc.supabase.co,https://back-end-rosia02.vercel.app
 
 # Configurações de frete (API dos Correios)
 FRETE_API_URL=https://api.correios.com.br
