--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@supabase/storage-js": "^2.11.0",
     "@supabase/supabase-js": "^2.39.0",
     "axios": "^1.6.2",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "google-auth-library": "^10.3.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mercadopago": "^2.8.0",
