Fix: Atualizar configurações CORS no vercel.json - Alterar Cross-Origin-Opener-Policy para unsafe-none - Adicionar Cross-Origin-Resource-Policy cross-origin - Sincronizar com configurações do server.js

--- a/vercel.json
+++ b/vercel.json
@@ -34,7 +34,11 @@
         },
         {
           "key": "Cross-Origin-Opener-Policy",
-          "value": "same-origin-allow-popups"
+          "value": "unsafe-none"
+        },
+        {
+          "key": "Cross-Origin-Resource-Policy",
+          "value": "cross-origin"
         },
         {
           "key": "Cross-Origin-Embedder-Policy",
