--- a/.env.example
+++ b/.env.example
@@ -13,8 +13,8 @@ BACKEND_URL=https://back-end-rosia02.vercel.app
 JWT_SECRET=your_jwt_secret_here
 
 # URL do frontend (para CORS)
-FRONTEND_URL=https://rosia.com.br
-FRONTEND_URL_LOCAL=https://rosia.com.br
+FRONTEND_URL=http://localhost:8080
+FRONTEND_URL_LOCAL=http://localhost:8080
 
 # Configurações CORS para produção
 CORS_ORIGIN=https://www.rosia.com.br,https://rosia.com.br,https://rosialoja-front-rosialastcommit.vercel.app,http://localhost:8080,https://nsazbeovtmmetpiyokqc.supabase.co,https://back-end-rosia02.vercel.app
