--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
+    "dev": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "deploy": "node deploy.js",
     "deploy:vercel": "vercel --prod",
@@ -31,14 +31,12 @@
     "google-auth-library": "^10.3.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mercadopago": "^2.8.0",
+    "mercadopago": "^2.10.0",
     "multer": "^2.0.2",
     "sharp": "^0.34.3",
     "uuid": "^9.0.1"
   },
-  "devDependencies": {
-    "nodemon": "^3.0.2"
-  },
+  "devDependencies": {},
   "engines": {
     "node": ">=18.0.0"
   }
